--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "vuex": "^3.0.1",
-    "vue-native-websocket": "^2.0.8"
+    "vue": "^2.5.22",
+    "vue-native-websocket": "^2.0.12",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0",
-    "@vue/cli-plugin-eslint": "^3.0.0",
-    "@vue/cli-service": "^3.0.0",
-    "@vue/eslint-config-prettier": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-service": "^3.3.0",
+    "@vue/eslint-config-prettier": "^3.0.5",
+    "vue-template-compiler": "^2.5.22"
   },
   "eslintConfig": {
     "root": true,
